# Projeto_CRUD

./: README.md  books.db  dockerfile  pyproject.toml
app/: controllers.py  db.py  logger_config.py  main.py  models.py  routers.py  schemas.py
